syntax = "proto3";

package stats.service.collector;

option java_multiple_files = true;
option java_package = "ru.practicum.ewm.stats.proto";

import "stats/message/user_action.proto";
import "google/protobuf/empty.proto";

service UserActionController {

  rpc CollectUserAction (message.action.UserActionProto)
      returns (google.protobuf.Empty);

}


